software/src/omaha/templates/css/styles.css
body {
  font-family: Roboto, sans-serif;
  font-size: 14px;
  background-color: #FAFAFA;
  margin: 0;
}

.card {
  background: #FFFFFF;
  max-width: 400px;
  padding: 24px;
  margin: 0 auto;
}

#overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  opacity: 0.6; /* see below for cross-browser opacity */
}

html, body {
  height: 100%;
}
section {
  margin: 20px;
}

a, a:h1 {
  text-decoration: none;
}

iron-toolbar {
  background-color: #455ede;
  box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.2);
  color: #fff;
  font-size: 20px;
  font-weight: 400;
  margin-bottom: 1.5em;
}

paper-button {
  background-color: #3367d6;
  margin: 0.5em 1em 0.5em 0;
  width: 10em;
}

paper-button[right] {
  position: fixed;
  right: 0;
}

paper-checkbox {
  margin-left: 1em;
}

paper-fab {
  position: absolute !important;
  top: 35px;
  right: 1em;
  z-index: 1;
}

paper-tabs {
  background-color: #5677fc;
  color: #fff;
}

paper-tabs paper-tab.iron-selected {
  color: #ffff8d;
}

paper-card {
  text-align: center;
}

.full-container {
  height: 100%;
  padding: 0px; /* This was 20, change back if needed */
}

.ui-state-default,
.ui-widget-content .ui-state-default,
.ui-widget-header .ui-state-default {
  background: #3f51b5;
  border-radius: 30px;
  border: 2px solid #d3d3d3;
  /*
  margin-bottom: -15px;
  margin-left: -5px;
  */
  margin-bottom: calc(-.012 * 100vw);
  margin-left: calc(-.005 * 100vw);

  width: calc(.022 * 100vw);
  height: calc(.022 * 100vw);
}

.ui-widget-header {
  background: #3f51b5;
}

.header.paper-card .title-text.paper-card {
  padding-bottom: 0px;
}

#custom_container {
  position: relative;
  top: calc(10%);
  width: 100%; 
  /* height: 100vh; */
  margin: 0px;
  height: 150%;
}

.custom {
  position: relative;
  top: 0px;
  width: 2%;
  display: inline-block; 
  height: calc(.6 * 100vh);
  margin-left: 1.25%;
  margin-right: 1.25%;
  float: left;
}

.custom > .custom_slider {
  /*height: calc(.35 * 100vh);*/
  height: calc(100% - .07 * 100vw);
  /*margin-bottom: calc(.005 * 100vw); */ /* This was 25 */
  /*margin-left: calc(.004 * 100vw);*/
  width: 60%;
  /*width: 50px; /* Change this back */
}

.custom > .level {
  /*
  color: #f6931f; 
  */
  border: 0;
  font-weight: bold; 
  font-size: calc(.018 * 100vw);
  /*width: calc(.028 * 100vw);*/
  width: 220%;
  color: #3f51b5;
  text-align: center;
  /* Make this a percentage */
  margin-left: calc(50% - .022 * 100vw);
  margin-bottom: 100%; /* This as 20 */
  margin-top: 0%;

  /*max-height: calc(.02 * 100vh); */
}

#equalizerListbox {
  width: 220px;
  overflow-x: hidden;
}

.custom > .bands {
    /*
  color: #f6931f; 
  */
  border: 0;
  font-weight: bold; 
  font-size: calc(.012 * 100vw);
  width: calc(.035 * 100vw);
  color: #3f51b5;
  text-align: center;
  /* Make this a percentage */
  margin-left: calc(50% - .022 * 100vw);
  margin-top: 100%; /* This as 20 */
  margin-bottom: 0%;
}

.custom.one {
  margin-left: 4%;
}

#musicvolume {
  font-size: 24px;
  margin-top: calc(0.05 * 100vh);
}

#pagingvolumelabel {
  font-size: 24px;
  margin-top: calc(0.05 * 100vh);
}

#soundmaskingvolume {
  font-size: 24px;
  margin-top: calc(0.05 * 100vh);
}

#fadelevelabel { 
  font-size: 24px;    /*  all these need to be calculated   */
  margin-top: calc(0.05 * 100vh);
}

.paper-progress-1 #primaryProgress.paper-progress {
  background-color: #3f51b5;
}

.paper-slider-0 #sliderKnobInner.paper-slider {
    background-color: #3f51b5;
}

.paper-slider-0 paper-ripple.paper-slider {
    color: #3f51b5;
}

.paper-slider-0 #sliderKnobInner.paper-slider::before {
    background-color: #3f51b5;
}

/* this header shit doesnt do anything */


/* end of shit not doing anything */

